--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
 						possible. Thank you.
 					</p>
 
-					<a href="mailto:mamtumbuka@yahoo.co.uk" target="_blank" rel="noopener noreferrer"
+					<a href="#" target="_blank" rel="noopener noreferrer"
 						class="btn btn-lg btn-blue">Send Email</a>
 
 				</div>
@@ -1004,7 +1004,7 @@
 											Malawi</a>
 									</li>
 
-									<li><a href="#contact">Office Email: karongadiocese@gmail.com </a></li>
+									
 
 
 								</ul>
